--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint",
+    "dev": "next dev",
     "analyze": "cross-env ANALYZE=true npx next build",
     "db:studio": "prisma studio",
     "db-seed": "prisma db seed",
     "db:migrate": "npx prisma migrate dev --name init --create-only && npx prisma generate",
     "db:push": "npx prisma db push",
     "init-prisma": "prisma db push && prisma db seed",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "lint": "next lint",
+    "start": "next start"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.21.12",
